fix(EventImage): add z-index to .overlay-image wrap overlay image in anchor tag

--- a/src/styles/HMBKSettings.scss
+++ b/src/styles/HMBKSettings.scss
@@ -409,6 +409,7 @@ img {
       padding: 0;
       margin: -1px;
       display: flex;
+      flex-direction: row;
       justify-content: center;
       .bg-gradient {
         background: linear-gradient(
@@ -419,10 +420,9 @@ img {
           transparent 100%
         );
       }
-      figure {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
+      .overlay-image {
+        position: relative;
+        z-index: 10;
       }
 
       img {
